snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210920.105033-2-sources.jar.sha256
02762661b337ebdf3085a0ca1c3d8781b1235e5a82df02d8c6f025c3104ea33a